--- a/app/src/main/res/layout/activity_inven.xml
+++ b/app/src/main/res/layout/activity_inven.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -21,24 +22,41 @@
         android:layout_marginBottom="50dp"
         android:orientation="vertical"
         android:gravity="center|top">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="인벤토리"
-            android:textSize="25sp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#cccc"/>
         <GridView
             android:id="@+id/gridView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:paddingTop="60dp"
+            android:clipToPadding="false"
             android:verticalSpacing="10dp"
             android:numColumns="4"
             android:listSelector="@android:color/transparent"/>
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/ui_empty_inven"
+        android:alpha="0.8"
+        tools:ignore="MissingConstraints">
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="&lt;"
+            android:fontFamily="@font/nexon_low_bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="인벤토리"
+            android:textSize="22sp">
+        </TextView>
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:text="\?"
+            android:fontFamily="@font/nexon_low_bold"/>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
