--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -236,11 +236,12 @@
                     android:layout_margin="10dp"/>
             </LinearLayout>
             <Button
+                android:id="@+id/enhance"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:background="@drawable/ui_button_basic"
                 android:onClick="useCube"
-                android:text="강화하기"/>
+                android:text="사용하기"/>
         </LinearLayout>
     </FrameLayout>
     <FrameLayout
@@ -250,6 +251,7 @@
         android:alpha="0.8"
         tools:ignore="MissingConstraints">
         <Button
+            android:id="@+id/back"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="&lt;"
