--- a/app/src/main/res/layout/activity_inven.xml
+++ b/app/src/main/res/layout/activity_inven.xml
@@ -50,13 +50,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="인벤토리"
-            android:onClick="goRewardAd"
             android:textSize="22sp">
         </TextView>
         <Button
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="right"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|center"
+            android:layout_marginRight="50dp"
+            android:onClick="goRewardAd"
+            android:text="🎁"/>
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|center"
             android:text="\?"
             android:onClick="goHelp"
             android:fontFamily="@font/nexon_low_bold"/>
