--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -261,7 +261,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="잠재능력을 재설정 합니다."
+            android:text="잠재능력"
             android:textSize="18sp">
         </TextView>
         <Button
