--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -258,12 +258,20 @@
             android:onClick="goBack"
             android:fontFamily="@font/nexon_low_bold"/>
         <TextView
+            android:id='@+id/potentialTitle'
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="잠재능력"
             android:textSize="18sp">
         </TextView>
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|center"
+            android:layout_marginRight="50dp"
+            android:onClick="goRewardAd"
+            android:text="🎁"/>
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
