--- a/app/src/main/res/layout/popup_select.xml
+++ b/app/src/main/res/layout/popup_select.xml
@@ -3,7 +3,7 @@
     android:background="#eeeeee"
     android:orientation="vertical"
     android:layout_width="300dp"
-    android:layout_height="350dp">
+    android:layout_height="wrap_content">
 
     <!-- 타이틀바 -->
     <LinearLayout
