--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -39,8 +39,7 @@
                 android:background="@drawable/ui_empty_item"
                 android:scaleType="fitCenter"
                 android:onClick="infoPopup"
-                android:src="@drawable/mongbel"
-                />
+                android:src="@drawable/mongbel"/>
             <TextView
                 android:id="@+id/equipment_name"
                 android:layout_width="wrap_content"
@@ -50,22 +49,22 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <ScrollView
+                <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:padding="10dp"
                     android:background="#9C000000">
                     <TextView
                         android:id="@+id/info"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:padding="5dp"
                         android:lineSpacingExtra="5dp"
-                        android:text="선택된 장비가 없습니다."
-                        android:textSize="20sp"
+                        android:text="선택된 장비가 없습니다.\n\n\n\n\n\n\n"
+                        android:textSize="18sp"
                         android:textColor="#F1F1F1"/>
-
-                </ScrollView>
+                </HorizontalScrollView>
                 <TextView
                     android:id="@+id/sparkle_effect"
                     android:layout_width="match_parent"
