--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -48,14 +48,28 @@
                 android:layout_height="1dp"
                 android:layout_margin="10dp"
                 android:background="#cccc"/>
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="스탯 공격력 6,593,398 ~ 6,593,398\nHP 5000"
-                android:lineSpacingExtra="5dp"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="@string/stat_info_lists"
+                    android:lineSpacingExtra="5dp"
+                    android:textSize="17sp"
+                    android:textColor="#555555"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="15,000,000 ~ 15,000,000\n60%\n320%"
+                    android:lineSpacingExtra="5dp"
+                    android:textSize="17sp"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -65,20 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="스탯 공격력"
-                android:lineSpacingExtra="5dp"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="10dp"
-                android:background="#cccc"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="하이퍼 스탯"
+                android:text="뭐넣지"
                 android:lineSpacingExtra="5dp"
                 android:textSize="17sp"
                 android:textColor="#555555"/>
@@ -98,7 +99,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
-
         </LinearLayout>
     </ScrollView>
     <LinearLayout
